# stm_gait_control

./: .gitignore  CMakeLists.txt  README.md  setup.py  sshkeyboard-2.3.1-py3-none-any.whl  sshkeyboard-2.3.1-py3-none-any.whl:Zone.Identifier
analysis/: analysis.py  color.py  paper_plots.py  requirements.txt  run.py  telemetry.py  theoretical_distances.py  vicon.py
include/stm_control/: joints.h  trapezoidal_traj.h
logs/: 8-4-telem-testing2.csv
logs/20230713/: 7-21-naive-2.csv  7-21-naive-3.csv
logs/7-12/: 7-12-working-sandpit.csv
logs/7-21/: 7-21-everything-testing.csv
logs/7-23-bezier/: 7-23-bezier-2.csv  7-23-bezier-3.csv
logs/7-23-bezierway/: 7-23-bezierway-1.csv  7-23-bezierway-2.csv
logs/7-23-linear/: 7-23-linearway-2.csv  7-23-linearway-3.csv
logs/7-23-naive/: 7-23-naive-1.csv  7-23-naive-2.csv  7-23-naive-3.csv
logs/8-4-bezier/: 8-4-bezier-2.csv
logs/8-4-bezierway/: 8-4-bezierway-1.csv  8-4-bezierway-2.csv
logs/8-4-indoortesting/: 8-4-telem-testing.csv  8-4-telem-testing2.csv  8-4-telem-testing3.csv
logs/8-4-linear/: 8-4-linear-1.csv  8-4-linear-2.csv
logs/8-4-naive/: 8-4-naive-2.csv
logs/8-5-bezier-balanced/: 8-5-bezier-1.csv  (+2 more)
results/: 8-5-bezier-balanced_all.csv  8-5-bezier-balanced_summary.csv  8-5-bezier-heading_all.csv  8-5-bezier-heading_summary.csv  8-5-bezier-time_all.csv  8-5-bezier-time_summary.csv  8-5-bezierway-balanced_all.csv  8-5-bezierway-balanced_summary.csv  8-5-bezierway-heading_all.csv  8-5-bezierway-heading_summary.csv  8-5-bezierway-time_all.csv  8-5-bezierway-time_summary.csv  8-5-linear-balanced_all.csv  8-5-linear-balanced_summary.csv  8-5-linear-heading_all.csv  8-5-linear-heading_summary.csv  8-5-linear-time_all.csv  8-5-linear-time_summary.csv  8-5-naive-balanced_all.csv  8-5-naive-balanced_summary.csv
util/: sync_epoch.sh
(+79 files in other folders)
